--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,3 @@
 [build]
-  command = ""
-  publish = "site-generator"
-
-[functions]
-  directory = "netlify/functions"
+  publish = "."
+  functions = "netlify/functions"
